k8s-configs/customer-product-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-product-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer-product-service
  template:
    metadata:
      labels:
        app: customer-product-service
    spec:
      containers:
        - name: customer-product-service
          image: coscraper.azurecr.io/customer-product-service:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: customer-product-service
spec:
  ports:
    - port: 8082
      targetPort: 8082
  selector:
    app: customer-product-service
