k8s-configs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: co-scraper
  namespace: co-scraper
spec:
  rules:
    - http:
        paths:
        - path: /product
          pathType: Prefix
          backend:
            service:
              name: product-service
              port:
                number: 8080
        - path: /customer
          pathType: Prefix
          backend:
            service:
              name: customer-service
              port:
                number: 8081
        - path: /customer-product
          pathType: Prefix
          backend:
            service:
              name: customer-product-service
              port:
                number: 8082
