k8s-configs/rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:management
          ports:
            - containerPort: 5672
            - containerPort: 15672
          volumeMounts:
            - name: rabbitmq-config
              mountPath: /etc/rabbitmq/definitions.json
              subPath: rabbitmq-setup.json
      volumes:
        - name: rabbitmq-config
          configMap:
            name: rabbitmq-config
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  
spec:
  ports:
    - port: 5672
      name: rabbitmq
      targetPort: 5672
    - port: 15672
      name: rabbitmq-management
      targetPort: 15672
  selector:
    app: rabbitmq
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-rabbitmq-access
  
spec:
  podSelector:
    matchLabels:
      app: rabbitmq
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: product-service
        - podSelector:
            matchLabels:
              app: customer-service
        - podSelector:
            matchLabels:
              app: customer-product-service
